--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -846,7 +846,7 @@
                 <div class="row" >
                   <div class="col-md-12" >
 
-                    <h1 class="product-name cx-heading cx-brand-font bold larger">{{articulo.nombre_producto.toLowerCase()}} <br> <small>{{articulo.princ_activo}}</small></h1>
+                    <h1 class="product-name cx-heading cx-brand-font bold larger">{{articulo.nombre_producto.toLowerCase()}}<span style="font-size: small; color: gray;">{{articulo.princ_activo}}</span></h1>
                     
                   </div>
 
