--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -819,7 +819,6 @@
   </div>
   
 
-
   <div class="modal show" id="modalInfoProduct">
     <div class="modal-dialog mw-100  modal-90 modal-100-ht">
       <div class="modal-content">
@@ -840,7 +839,7 @@
             <div class="row" >
 
               <div class="col-md-5 col-sm-12">
-                <img src="{{  srcServer+articulo.dir_imagen }}" alt="" >
+                <img src="{{  srcServer+articulo.dir_imagen }}" alt="" style="width: 100%; " >
               </div>
               <div class="col-md-7 col-sm-12">
                 <div class="row" >
