--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -761,7 +761,7 @@
                             <td ><i class="fa fa-eye" style="cursor: pointer;"  ng-click="selectProduct($index)" ></i></td>
                             <td ng-click="selectProduct($index,true)" > 
                               <div ng-if="x.dir_imagen != ''" style="cursor: pointer;" ng-click="zoomImg(srcServer+x.dir_imagen, x.nombre_producto )"   >
-                                <img id="img_{{$index}}" src="{{  srcServer+x.dir_imagen }}" alt="no image"  style="width: 120px;">
+                                <img id="img_{{$index}}" src="../../assets/imagen/{{ x.dir_imagen }}" alt="no image"  style="width: 120px;">
                               </div>
                             </td>
                             <td ng-click="selectProduct($index,true)" ><p class="text-left">{{ x.nombre_producto }}</p></td>
