--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -233,7 +233,7 @@
 
               <td> 
                 <div ng-if="x.dir_imagen != ''" style="cursor: pointer;" ng-click="zoomImg(srcServer+x.dir_imagen, x.nombre_producto )"   >
-                  <img id="img_{{$index}}" src="../../assets/imagen/{{ x.dir_imagen }}" alt="no image"  style="width: 120px;">
+                  <img id="img_{{$index}}" src="/ddo/app/assets/imagen/{{ x.dir_imagen }}" alt="no image"  style="width: 120px;">
                 </div>
               </td>
               <td><p class="text-left">{{ x.nombre_producto }}</p></td>
