--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -760,8 +760,8 @@
                             <td ng-click="selectProduct($index,true)" ><p class="text-left">{{ $index + 1 }}</p></td>
                             <td ><i class="fa fa-eye" style="cursor: pointer;"  ng-click="selectProduct($index)" ></i></td>
                             <td ng-click="selectProduct($index,true)" > 
-                              <div ng-if="x.dir_imagen != ''" style="cursor: pointer;" ng-click="zoomImg(srcServer+x.dir_imagen, x.nombre_producto )"   >
-                                <img id="img_{{$index}}" src="../../assets/imagen/{{ x.dir_imagen }}" alt="no image"  style="width: 120px;">
+                              <div ng-if="x.dir_imagen != ''" style="cursor: pointer;" ng-click="zoomImg('/ddo/app/assets/imagen/'+x.dir_imagen, x.nombre_producto )"   >
+                                <img id="img_{{$index}}" src="/ddo/app/assets/imagen/{{ x.dir_imagen }}" alt="no image"  style="width: 120px;">
                               </div>
                             </td>
                             <td ng-click="selectProduct($index,true)" ><p class="text-left">{{ x.nombre_producto }}</p></td>
@@ -829,7 +829,7 @@
             <div class="row" >
 
               <div class="col-md-5 col-sm-12">
-                <img src="{{  srcServer+articulo.dir_imagen }}" alt="" style="width: 100%; " >
+                <img src="/ddo/app/assets/imagen/{{ articulo.dir_imagen }}" alt="" style="width: 100%; " >
               </div>
               <div class="col-md-7 col-sm-12">
                 <div class="row" >
